# circle-test

./: meson.build  readme.md
.circleci/: config.yml
src/: meson.build
src/main/: meson.build
src/main/prog/: main.c  meson.build
